Fix list button overlap on Safari/iOS

--- a/app/assets/stylesheets/global.sass
+++ b/app/assets/stylesheets/global.sass
@@ -144,7 +144,7 @@ a
 	.tableBtn,
 	.completion_emoji
 		display: flex
-		flex: 0
+		// flex: 0
 		.btn
 			margin: 0 0 0 10px
 
